src/test/deca/syntax/invalid/objet/NewLonely.deca
// no viable alternative at input 'new;'
// Description : new seul
// Resultat : erreur en ligne 7: new a besoin d'un membre


{
    new;
}
